task3 with anls note

--- a/task3.ipynb
+++ b/task3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "11440208",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8cbf4742",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Бренд AX 1</th>\n",
+       "      <th>Неделя</th>\n",
+       "      <th>Выручка</th>\n",
+       "      <th>Маржинальность</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shiseido</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.353686e+09</td>\n",
+       "      <td>0.167824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Clarins</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.329934e+09</td>\n",
+       "      <td>0.091348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shiseido</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1.267702e+09</td>\n",
+       "      <td>0.169212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Clarins</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9.747119e+08</td>\n",
+       "      <td>0.145904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Clinique</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4.982012e+08</td>\n",
+       "      <td>0.140136</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Бренд AX 1  Неделя       Выручка  Маржинальность\n",
+       "0   Shiseido      14  1.353686e+09        0.167824\n",
+       "1    Clarins      14  1.329934e+09        0.091348\n",
+       "2   Shiseido      15  1.267702e+09        0.169212\n",
+       "3    Clarins      15  9.747119e+08        0.145904\n",
+       "4   Clinique      15  4.982012e+08        0.140136"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_excel(\n",
     "    r\"source_data/Тестовое_задание_Data_аналитик_ЦО_2025_.xlsx\",\n",
@@ -28,10 +109,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "03a4600a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>brand</th>\n",
+       "      <th>week</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>margin_rate</th>\n",
+       "      <th>gp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shiseido</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.353686e+09</td>\n",
+       "      <td>0.167824</td>\n",
+       "      <td>2.271804e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Clarins</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.329934e+09</td>\n",
+       "      <td>0.091348</td>\n",
+       "      <td>1.214863e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shiseido</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1.267702e+09</td>\n",
+       "      <td>0.169212</td>\n",
+       "      <td>2.145103e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Clarins</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9.747119e+08</td>\n",
+       "      <td>0.145904</td>\n",
+       "      <td>1.422140e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Clinique</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4.982012e+08</td>\n",
+       "      <td>0.140136</td>\n",
+       "      <td>6.981598e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      brand  week       revenue  margin_rate            gp\n",
+       "0  Shiseido    14  1.353686e+09     0.167824  2.271804e+08\n",
+       "1   Clarins    14  1.329934e+09     0.091348  1.214863e+08\n",
+       "2  Shiseido    15  1.267702e+09     0.169212  2.145103e+08\n",
+       "3   Clarins    15  9.747119e+08     0.145904  1.422140e+08\n",
+       "4  Clinique    15  4.982012e+08     0.140136  6.981598e+07"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Переименовываем для удобства\n",
     "data = df.rename(columns={\n",
@@ -49,10 +217,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fbe34b3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Неделя 14</th>\n",
+       "      <th>Неделя 15</th>\n",
+       "      <th>Изменение</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Выручка</th>\n",
+       "      <td>8,464,188,705</td>\n",
+       "      <td>8,207,907,632</td>\n",
+       "      <td>-256,281,073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Валовая прибыль</th>\n",
+       "      <td>1,237,987,713</td>\n",
+       "      <td>1,268,186,314</td>\n",
+       "      <td>30,198,601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Маржинальность</th>\n",
+       "      <td>14.63%</td>\n",
+       "      <td>15.45%</td>\n",
+       "      <td>+0.82 п.п.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Неделя 14      Неделя 15     Изменение\n",
+       "Выручка          8,464,188,705  8,207,907,632  -256,281,073\n",
+       "Валовая прибыль  1,237,987,713  1,268,186,314    30,198,601\n",
+       "Маржинальность          14.63%         15.45%    +0.82 п.п."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Сводная таблица по неделям\n",
     "totals = data.groupby(\"week\").agg(\n",
@@ -83,10 +312,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3e8c4f32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ТОП 7 БРЕНДОВ ПО РОСТУ ВАЛОВОЙ ПРИБЫЛИ (GP):\n",
+      "                delta_gp     delta_rev  margin_w14  margin_w15\n",
+      "brand                                                         \n",
+      "Clarins     2.072776e+07 -3.552224e+08    0.091348    0.145904\n",
+      "Payot       1.966856e+07  1.022935e+08    0.216540    0.209797\n",
+      "Valmont     1.435105e+07  7.565795e+07    0.152891    0.163173\n",
+      "La Mer      8.121260e+06  4.601070e+07    0.172968    0.173562\n",
+      "St.Barth    6.431818e+06  3.458730e+07    0.193963    0.191233\n",
+      "La Prairie  6.045029e+06  1.018990e+07    0.154521    0.175854\n",
+      "Kiehls      3.870925e+06  2.095201e+07    0.193312    0.192444\n",
+      "\n",
+      "\n",
+      "ТОП 7 БРЕНДОВ ПО ПАДЕНИЮ ВАЛОВОЙ ПРИБЫЛИ (GP):\n",
+      "                       delta_gp     delta_rev  margin_w14  margin_w15\n",
+      "brand                                                                \n",
+      "Helena Rubinstein -3.374353e+06 -1.238216e+07    0.130000    0.080604\n",
+      "CHANEL            -3.979465e+06 -1.938396e+07    0.087772    0.077289\n",
+      "Dr Barbara Sturm  -3.984443e+06 -1.433499e+07    0.223325    0.194735\n",
+      "SENSAI            -5.581152e+06 -3.582629e+07    0.147353    0.144952\n",
+      "Sisley            -1.233543e+07 -9.473350e+07    0.155447    0.167015\n",
+      "Clinique          -1.257701e+07  1.280439e+07    0.169744    0.140136\n",
+      "Shiseido          -1.267008e+07 -8.598306e+07    0.167824    0.169212\n"
+     ]
+    }
+   ],
    "source": [
     "# Создаём pivot по брендам\n",
     "pivot = data.pivot_table(index=\"brand\", columns=\"week\", values=[\"revenue\", \"gp\"], aggfunc=\"sum\").fillna(0)\n",
@@ -118,10 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9ac3911c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Разложение изменения маржинальности:\n",
+      "\n",
+      "Микс-эффект (изменение доли выручки): +0.33 п.п.\n",
+      "Внутри-брендовый эффект (изменение маржи брендов): +0.49 п.п.\n",
+      "Реальное изменение маржинальности: +0.82 п.п.\n"
+     ]
+    }
+   ],
    "source": [
     "# Доля выручки каждого бренда в общей выручке недели\n",
     "w14 = brands[\"rev_w14\"] / rev_14\n",
@@ -149,10 +419,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e9ce475f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вклады брендов в изменение маржинальности:\n",
+      "                   mix_contrib_pp  within_contrib_pp  total_contrib_pp\n",
+      "brand                                                                 \n",
+      "Clarins                    -0.351              0.648             0.297\n",
+      "Payot                       0.291             -0.030             0.261\n",
+      "Valmont                     0.152              0.034             0.186\n",
+      "La Mer                      0.112              0.002             0.113\n",
+      "La Prairie                  0.031              0.054             0.085\n",
+      "St.Barth                    0.087             -0.003             0.083\n",
+      "Kiehls                      0.063             -0.002             0.060\n",
+      "Caudalie                    0.115             -0.062             0.054\n",
+      "ELEMIS                      0.053             -0.002             0.051\n",
+      "OK Beauty                   0.046              0.003             0.048\n",
+      "Thalgo                      0.027              0.021             0.048\n",
+      "James Read                  0.033              0.000             0.033\n",
+      "Biothal                     0.000              0.031             0.031\n",
+      "Giorgio Armani              0.000              0.028             0.028\n",
+      "Guerlain                    0.020              0.008             0.028\n",
+      "Zielinski&Rozen             0.021              0.007             0.027\n",
+      "Lancome                    -0.037              0.063             0.025\n",
+      "Guam                        0.021              0.003             0.024\n",
+      "CHOLLEY                     0.000              0.024             0.024\n",
+      "COOLA                       0.022             -0.001             0.022\n",
+      "Glam Glow                   0.019              0.002             0.020\n",
+      "Loccitane                   0.004              0.015             0.018\n",
+      "Christian Dior             -0.016              0.033             0.016\n",
+      "Swiss Line                  0.012              0.003             0.015\n",
+      "Omorovicza                  0.019             -0.004             0.015\n",
+      "Rexaline                    0.015             -0.000             0.015\n",
+      "Lancaster                   0.082             -0.068             0.014\n",
+      "Ahava                       0.046             -0.038             0.008\n",
+      "Ecooking                    0.009             -0.004             0.005\n",
+      "Biotherm                    0.000             -0.001            -0.001\n",
+      "Givenchy                   -0.003              0.001            -0.001\n",
+      "Skyn Iceland                0.001             -0.004            -0.003\n",
+      "Botany                     -0.005              0.001            -0.004\n",
+      "Estee Lauder                0.009             -0.015            -0.005\n",
+      "Proraso                    -0.005             -0.000            -0.005\n",
+      "Kenzo                       0.011             -0.018            -0.007\n",
+      "MIXIT                      -0.009             -0.001            -0.010\n",
+      "FOREO                       0.010             -0.024            -0.014\n",
+      "BABOR                      -0.016              0.001            -0.015\n",
+      "Cellcosmet                 -0.007             -0.014            -0.021\n",
+      "Bellefontaine              -0.023             -0.000            -0.023\n",
+      "Darphin                    -0.019             -0.004            -0.023\n",
+      "Cle De Peau                -0.028              0.001            -0.027\n",
+      "Lumene                     -0.022             -0.006            -0.027\n",
+      "Anne Semonin               -0.031             -0.000            -0.031\n",
+      "Dr Brandt                  -0.032             -0.000            -0.032\n",
+      "FILORGA                    -0.037              0.003            -0.034\n",
+      "Grown Alchemist            -0.037             -0.000            -0.037\n",
+      "Helena Rubinstein          -0.017             -0.021            -0.039\n",
+      "CHANEL                     -0.013             -0.028            -0.041\n",
+      "Dr Barbara Sturm           -0.036             -0.010            -0.045\n",
+      "SENSAI                     -0.056             -0.004            -0.059\n",
+      "Shiseido                   -0.092              0.021            -0.071\n",
+      "Clinique                    0.057             -0.180            -0.123\n",
+      "Sisley                     -0.162              0.029            -0.133\n",
+      "\n",
+      "Топ 3 улучшающих маржинальность:\n",
+      "         mix_contrib_pp  within_contrib_pp  total_contrib_pp\n",
+      "brand                                                       \n",
+      "Clarins          -0.351              0.648             0.297\n",
+      "Payot             0.291             -0.030             0.261\n",
+      "Valmont           0.152              0.034             0.186\n",
+      "\n",
+      "Топ 3 ухудшающих маржинальность:\n",
+      "          mix_contrib_pp  within_contrib_pp  total_contrib_pp\n",
+      "brand                                                        \n",
+      "Shiseido          -0.092              0.021            -0.071\n",
+      "Clinique           0.057             -0.180            -0.123\n",
+      "Sisley            -0.162              0.029            -0.133\n"
+     ]
+    }
+   ],
    "source": [
     "# Таблица вкладов в маржинальность\n",
     "drivers = pd.DataFrame({\n",
@@ -185,10 +534,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bcc3b7a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "АНАЛИТИЧЕСКАЯ ЗАПИСКА\n",
+      "Анализ продаж: неделя 15 vs неделя 14\n",
+      "================================================================================\n",
+      "\n",
+      "Итоговая метрика (TL;DR):\n",
+      "\n",
+      "Выручка изменилась на -3.03% (-256,281,073 руб.), валовая прибыль на +2.44% (+30,198,601 руб.)\n",
+      "Маржинальность изменилась с 14.63% до 15.45% (+0.82 п.п.)\n",
+      "\n",
+      "Ключевые драйверы:\n",
+      "Улучшение маржинальности на 0.82 п.п. обеспечено:\n",
+      "  • Внутри-брендовым эффектом: +0.49 п.п. (сами бренды стали маржинальнее)\n",
+      "  • Микс-эффектом: +0.33 п.п. (сместилась структура продаж)\n",
+      "\n",
+      "Топ-3 бренда по росту валовой прибыли:\n",
+      "  1. Clarins: GP +20,727,762 руб., маржа 9.1%→14.6%\n",
+      "  2. Payot: GP +19,668,557 руб., маржа 21.7%→21.0%\n",
+      "  3. Valmont: GP +14,351,054 руб., маржа 15.3%→16.3%\n",
+      "\n",
+      "Топ-3 бренда по падению валовой прибыли:\n",
+      "  1. Sisley: GP -12,335,429 руб., маржа 15.5%→16.7%\n",
+      "  2. Clinique: GP -12,577,014 руб., маржа 17.0%→14.0%\n",
+      "  3. Shiseido: GP -12,670,085 руб., маржа 16.8%→16.9%\n",
+      "\n",
+      "Проблемные бренды (падение маржи):\n",
+      "  1. Grown Alchemist: маржа 20.4%→0.0% (-20.37 п.п.)\n",
+      "  2. Dr Brandt: маржа 13.6%→0.0% (-13.64 п.п.)\n",
+      "  3. Bellefontaine: маржа 10.8%→0.0% (-10.76 п.п.)\n",
+      "\n",
+      "Рекомендации (быстрый результат):\n",
+      "1. Ограничить скидки/промо в брендах с падением маржи (особенно Grown Alchemist)\n",
+      "   Возможный возврат GP: 1,672,104,402 руб. за неделю при восстановлении маржи\n",
+      "2. Усилить продвижение маржинальных лидеров (Clarins, Payot)\n",
+      "   Они дают максимальный вклад в прибыль\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# А\n",
     "top_gp_up = brands.head(3)\n",
